#PROD-3441 fixed multiline not showing on group description popup [PROD-3441] PROD-3441 #comment fixed multiline not showing on group description popup via css

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_loop.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_loop.scss
@@ -117,6 +117,10 @@
 			display: none;
 		}
 
+		p {
+			white-space: pre-wrap;
+		}
+
 	}
 
 	.bb-model-footer {
